--- a/part4/blog-list/.eslintrc.json
+++ b/part4/blog-list/.eslintrc.json
@@ -6,10 +6,17 @@
     },
     "extends": "airbnb-base",
     "overrides": [
+        {
+            "files": [
+                "**/*.test.js"
+            ],
+            "env": {
+                "jest": true
+            }
+        }
     ],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
-    "rules": {
-    }
+    "rules": {}
 }
