--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -18,7 +18,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "lint": "eslint . --fix"
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
