--- a/part9/intro/package.json
+++ b/part9/intro/package.json
@@ -8,5 +8,8 @@
     "ts-node": "ts-node"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.2.5"
+  }
 }
