--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = part4/blog-list/part4/part3-notes-backend
 	url = git@github.com:fullstack-hy2020/part3-notes-backend.git
 	branch = part4-5
+[submodule "part9/patientor-backend/part9/patientor"]
+	path = part9/patientor-backend/part9/patientor
+	url = git@github.com:jacksonliiii/patientor.git
